[gd_scene load_steps=4 format=3 uid="uid://c81lb03lbh715"]

[ext_resource type="Script" path="res://src/main/MainGame/MainGameUI/ContainerNutrition/ContainerNutrition.gd" id="1_3ug8y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f300g"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.529412, 0.513726, 0.505882, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tmuyp"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ContainerNutrition" type="MarginContainer"]
size_flags_horizontal = 3
script = ExtResource("1_3ug8y")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "氮："

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="BG" type="Panel" parent="HBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f300g")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="UnitsN" type="VBoxContainer" parent="HBoxContainer/HBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="Unit1N" type="Panel" parent="HBoxContainer/HBoxContainer/MarginContainer/MarginContainer/UnitsN"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit2N" type="Panel" parent="HBoxContainer/HBoxContainer/MarginContainer/MarginContainer/UnitsN"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit3N" type="Panel" parent="HBoxContainer/HBoxContainer/MarginContainer/MarginContainer/UnitsN"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "磷："

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="BG" type="Panel" parent="HBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f300g")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer2/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="UnitsP" type="VBoxContainer" parent="HBoxContainer/HBoxContainer2/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="Unit1P" type="Panel" parent="HBoxContainer/HBoxContainer2/MarginContainer/MarginContainer/UnitsP"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit2P" type="Panel" parent="HBoxContainer/HBoxContainer2/MarginContainer/MarginContainer/UnitsP"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit3P" type="Panel" parent="HBoxContainer/HBoxContainer2/MarginContainer/MarginContainer/UnitsP"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "钾："

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="BG" type="Panel" parent="HBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f300g")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer3/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="UnitsK" type="VBoxContainer" parent="HBoxContainer/HBoxContainer3/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_constants/separation = 3

[node name="Unit1K" type="Panel" parent="HBoxContainer/HBoxContainer3/MarginContainer/MarginContainer/UnitsK"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit2K" type="Panel" parent="HBoxContainer/HBoxContainer3/MarginContainer/MarginContainer/UnitsK"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")

[node name="Unit3K" type="Panel" parent="HBoxContainer/HBoxContainer3/MarginContainer/MarginContainer/UnitsK"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_tmuyp")
